--- a/app/src/main/res/layout-land/fragment_character_upsert.xml
+++ b/app/src/main/res/layout-land/fragment_character_upsert.xml
@@ -3,12 +3,11 @@
 <!-- land\fragment_character_upsert.xml
 Purpose: Landscape Create/Edit fragment layout for CharacterUpsertFragment
 
-Drew Matheson, 2015.11.23: Created
+Drew Matheson, 2015.12.08: Created
 -->
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     style="@style/fragmentLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -29,7 +28,7 @@ Drew Matheson, 2015.11.23: Created
         style="@style/pageHeader"
         android:layout_alignParentTop="true"
         android:text="@string/create_character"
-        android:maxLines="1"
+        android:singleLine="true"
         android:ellipsize="end"
         android:layout_marginBottom="0dp"/>
 
@@ -66,7 +65,7 @@ Drew Matheson, 2015.11.23: Created
     <LinearLayout
         android:id="@+id/spinner_container"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="@dimen/spinner_single_line_height"
         android:orientation="horizontal"
         android:layout_below="@id/spinner_label_container" >
         <Spinner
@@ -129,5 +128,5 @@ Drew Matheson, 2015.11.23: Created
         android:inputType="text|textCapSentences|textMultiLine|textLongMessage"
         android:layout_toLeftOf="@id/button_container"
         android:layout_alignParentBottom="true"
-        android:layout_marginLeft="@dimen/standard_padding" />
+        android:layout_marginRight="@dimen/standard_padding" />
 </RelativeLayout>
