--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,6 @@
     <dimen name="detail_text">16sp</dimen>
 
     <dimen name="button_height">40dp</dimen>
+
+    <dimen name="spinner_single_line_height">35dp</dimen>
 </resources>
