--- a/app/src/main/res/layout-land/fragment_event_detail.xml
+++ b/app/src/main/res/layout-land/fragment_event_detail.xml
@@ -41,6 +41,7 @@
         style="@style/detailTextView"
         android:singleLine="true"
         android:layout_toRightOf="@id/event_date_label"
+        android:layout_toEndOf="@id/event_date_label"
         android:layout_alignBaseline="@id/event_date_label" />
 
     <TextView
@@ -56,6 +57,7 @@
         android:ems="10"
         android:singleLine="true"
         android:layout_toRightOf="@id/xp_gained_label"
+        android:layout_toEndOf="@id/xp_gained_label"
         android:layout_alignBaseline="@id/xp_gained_label" />
 
     <TextView
@@ -65,6 +67,7 @@
         android:layout_marginRight="@dimen/standard_padding"
         android:layout_marginEnd="@dimen/standard_padding"
         android:layout_toRightOf="@id/event_xp"
+        android:layout_toEndOf="@id/event_xp"
         android:layout_alignBaseline="@id/event_xp" />
     <TextView
         android:id="@+id/event_characters_present"
@@ -72,6 +75,7 @@
         android:ems="12"
         android:singleLine="true"
         android:layout_toRightOf="@id/characters_present_label"
+        android:layout_toEndOf="@id/characters_present_label"
         android:layout_alignBaseline="@id/characters_present_label" />
 
     <TextView
@@ -98,8 +102,11 @@
             android:text="@string/edit"
             android:layout_below="@id/delete_event_button"
             android:layout_alignParentRight="false"
+            android:layout_alignParentEnd="false"
             android:layout_alignLeft="@id/delete_event_button"
+            android:layout_alignStart="@id/delete_event_button"
             android:layout_alignRight="@id/delete_event_button"
+            android:layout_alignEnd="@id/delete_event_button"
             android:paddingRight="0dp"
             android:paddingLeft="0dp"
             android:layout_marginTop="@dimen/standard_padding"/>
@@ -111,9 +118,10 @@
         android:layout_height="fill_parent"
         android:layout_below="@id/xp_gained_label"
         android:layout_toRightOf="@id/event_description_label"
+        android:layout_toEndOf="@id/event_description_label"
         android:layout_marginTop="@dimen/activity_vertical_margin"
         android:background="@color/background_floating_material_dark"
-        android:padding="2sp">
+        android:padding="@dimen/multiline_text_padding" >
         <TextView
             android:id="@+id/event_description"
             android:layout_height="wrap_content"
