--- a/app/src/main/res/layout/event_twopane.xml
+++ b/app/src/main/res/layout/event_twopane.xml
@@ -41,8 +41,10 @@
             android:id="@+id/death_button"
             style="@style/primaryButton"
             android:layout_width="match_parent"
-            android:text="Died"
-            android:layout_alignParentBottom="true"/>
+            android:text="@string/died"
+            android:layout_alignParentBottom="true"
+            android:paddingLeft="0dp"
+            android:paddingRight="0dp" />
 
         <fragment
             android:id="@+id/event_list"
