--- a/app/src/main/res/layout/fragment_character_detail.xml
+++ b/app/src/main/res/layout/fragment_character_detail.xml
@@ -109,7 +109,8 @@
         android:layout_above="@id/footer"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:background="@color/background_floating_material_dark">
+        android:background="@color/background_floating_material_dark"
+        android:padding="@dimen/multiline_text_padding" >
         <TextView
             android:id="@+id/character_description"
             android:layout_height="wrap_content"
