Fixed crashes on orientation change in two-pane mode.
Hooked up the tutorials button to open the page in a browser.
Fixed wrong button coloring in activity_customize landscape
Fixed layouts detail and upsert layouts in two-pane mode.

# Repro Scenario that was fixed:
Click add character
Rotate
Click a character in the list

Click add event
Rotate
Click an event in the list

--- a/app/src/main/res/layout-land/fragment_character_upsert.xml
+++ b/app/src/main/res/layout-land/fragment_character_upsert.xml
@@ -49,6 +49,7 @@ Drew Matheson, 2015.12.08: Created
         android:layout_below="@id/upsert_character_name">
         <TextView
             android:id="@+id/upsert_character_race_label"
+            style="@style/detailTextViewLabel"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -56,6 +57,7 @@ Drew Matheson, 2015.12.08: Created
 
         <TextView
             android:id="@+id/upsert_character_class_label"
+            style="@style/detailTextViewLabel"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
