--- a/app/src/main/res/layout-land/fragment_character_detail.xml
+++ b/app/src/main/res/layout-land/fragment_character_detail.xml
@@ -30,79 +30,73 @@
         android:maxLines="2"
         android:ellipsize="end"/>
 
-    <TextView
-        android:id="@+id/character_race_label"
-        style="@style/detailTextViewLabel"
-        android:text="@string/race"
-        android:layout_below="@id/character_name"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"/>
-    <TextView
-        android:id="@+id/character_race"
-        style="@style/detailTextView"
-        android:ems="12"
-        android:layout_toRightOf="@id/character_race_label"
-        android:layout_toEndOf="@id/character_race_label"
-        android:layout_alignBaseline="@id/character_race_label"
-        android:singleLine="true" />
+    <LinearLayout
+        android:id="@+id/race_class_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_below="@id/character_name">
+        <TextView
+            android:id="@+id/character_race_label"
+            style="@style/detailTextViewLabel"
+            android:text="@string/race" />
+        <TextView
+            android:id="@+id/character_race"
+            style="@style/detailTextView"
+            android:layout_width="0dp"
+            android:layout_weight="3"
+            android:singleLine="true" />
 
-    <TextView
-        android:id="@+id/character_class_label"
-        style="@style/detailTextViewLabel"
-        android:text="@string/character_class"
-        android:layout_toRightOf="@id/character_race"
-        android:layout_toEndOf="@id/character_race"
-        android:layout_alignBaseline="@id/character_race"
-        android:layout_marginLeft="@dimen/standard_padding"
-        android:layout_marginStart="@dimen/standard_padding"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"/>
-    <TextView
-        android:id="@+id/character_class"
-        style="@style/detailTextView"
-        android:ems="12"
-        android:layout_toRightOf="@id/character_class_label"
-        android:layout_toEndOf="@id/character_class_label"
-        android:layout_alignBaseline="@id/character_class_label"
-        android:singleLine="true" />
+        <TextView
+            android:id="@+id/character_class_label"
+            style="@style/detailTextViewLabel"
+            android:text="@string/character_class"
+            android:layout_marginLeft="@dimen/detailTextViewLabel_padding"
+            android:layout_marginStart="@dimen/detailTextViewLabel_padding" />
+        <TextView
+            android:id="@+id/character_class"
+            style="@style/detailTextView"
+            android:layout_width="0dp"
+            android:layout_weight="3"
+            android:singleLine="true" />
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/total_xp_label"
-        style="@style/detailTextViewLabel"
-        android:text="@string/total_xp"
-        android:layout_below="@id/character_race_label"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"/>
-    <TextView
-        android:id="@+id/character_xp"
-        style="@style/detailTextView"
-        android:layout_toRightOf="@id/total_xp_label"
-        android:layout_toEndOf="@id/total_xp_label"
-        android:layout_alignBaseline="@id/total_xp_label" />
+    <LinearLayout
+        android:id="@+id/xp_status_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_below="@id/race_class_container">
+        <TextView
+            android:id="@+id/total_xp_label"
+            style="@style/detailTextViewLabel"
+            android:text="@string/total_xp"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin"/>
+        <TextView
+            android:id="@+id/character_xp"
+            style="@style/detailTextView"
+            android:layout_width="0dp"
+            android:layout_weight="3" />
 
-    <TextView
-        android:id="@+id/character_status_label"
-        style="@style/detailTextViewLabel"
-        android:text="@string/status"
-        android:layout_toRightOf="@id/character_xp"
-        android:layout_toEndOf="@id/character_xp"
-        android:layout_alignBaseline="@id/character_xp"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:layout_alignLeft="@id/character_class_label"
-        android:layout_alignStart="@id/character_class_label"/>
-    <TextView
-        android:id="@+id/character_status"
-        style="@style/detailTextView"
-        android:layout_toRightOf="@id/character_status_label"
-        android:layout_toEndOf="@id/character_status_label"
-        android:layout_alignBaseline="@id/character_status_label" />
+        <TextView
+            android:id="@+id/character_status_label"
+            style="@style/detailTextViewLabel"
+            android:text="@string/status"
+            android:layout_marginLeft="@dimen/detailTextViewLabel_padding"
+            android:layout_marginStart="@dimen/detailTextViewLabel_padding"/>
+        <TextView
+            android:id="@+id/character_status"
+            style="@style/detailTextView"
+            android:layout_width="0dp"
+            android:layout_weight="1" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/character_description_label"
         style="@style/detailTextViewLabel"
         android:text="@string/description"
-        android:layout_below="@id/total_xp_label"
+        android:layout_below="@id/xp_status_container"
         android:layout_marginRight="@dimen/standard_padding"
         android:layout_marginEnd="@dimen/standard_padding" />
 
@@ -135,7 +129,7 @@
         android:id="@+id/description_scrollview"
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
-        android:layout_below="@id/total_xp_label"
+        android:layout_below="@id/xp_status_container"
         android:layout_toRightOf="@id/character_description_label"
         android:layout_toEndOf="@id/character_description_label"
         android:layout_marginTop="@dimen/activity_vertical_margin"
