--- a/app/src/main/res/layout-land/fragment_event_detail.xml
+++ b/app/src/main/res/layout-land/fragment_event_detail.xml
@@ -54,29 +54,30 @@
     <TextView
         android:id="@+id/event_xp"
         style="@style/detailTextView"
-        android:ems="10"
         android:singleLine="true"
         android:layout_toRightOf="@id/xp_gained_label"
         android:layout_toEndOf="@id/xp_gained_label"
-        android:layout_alignBaseline="@id/xp_gained_label" />
+        android:layout_alignBaseline="@id/xp_gained_label"
+        android:layout_marginRight="@dimen/standard_padding"
+        android:layout_marginEnd="@dimen/standard_padding"/>
 
+    <TextView
+        android:id="@+id/event_characters_present"
+        style="@style/detailTextView"
+        android:ems="6"
+        android:singleLine="true"
+        android:layout_alignBaseline="@id/event_xp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
     <TextView
         android:id="@+id/characters_present_label"
         style="@style/detailTextViewLabel"
         android:text="@string/characters_present"
         android:layout_marginRight="@dimen/standard_padding"
         android:layout_marginEnd="@dimen/standard_padding"
-        android:layout_toRightOf="@id/event_xp"
-        android:layout_toEndOf="@id/event_xp"
-        android:layout_alignBaseline="@id/event_xp" />
-    <TextView
-        android:id="@+id/event_characters_present"
-        style="@style/detailTextView"
-        android:ems="12"
-        android:singleLine="true"
-        android:layout_toRightOf="@id/characters_present_label"
-        android:layout_toEndOf="@id/characters_present_label"
-        android:layout_alignBaseline="@id/characters_present_label" />
+        android:layout_toStartOf="@id/event_characters_present"
+        android:layout_toLeftOf="@id/event_characters_present"
+        android:layout_alignBaseline="@id/event_characters_present" />
 
     <TextView
         android:id="@+id/event_description_label"
