--- a/app/src/main/res/layout/activity_customize.xml
+++ b/app/src/main/res/layout/activity_customize.xml
@@ -78,11 +78,22 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-        <Spinner
-            android:id="@+id/race_spinner"
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1.25" />
+            android:layout_weight="1.25"
+            android:orientation="horizontal">
+            <Spinner
+                android:id="@+id/race_spinner"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content" />
+            <TextView
+                style="@style/emptyListViewItem"
+                android:id="@+id/empty_race_item"
+                android:paddingTop="@dimen/spinner_single_line_height"
+                android:text="@string/empty_delete_race_spinner" />
+        </LinearLayout>
+
         <Button
             android:id="@+id/delete_race_button"
             android:layout_width="0dp"
@@ -106,11 +117,22 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-        <Spinner
-            android:id="@+id/class_spinner"
+        <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1.25" />
+            android:layout_weight="1.25">
+            <Spinner
+                android:id="@+id/class_spinner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+            <TextView
+                style="@style/emptyListViewItem"
+                android:id="@+id/empty_class_item"
+                android:paddingTop="@dimen/spinner_single_line_height"
+                android:text="@string/empty_delete_character_class_spinner" />
+        </LinearLayout>
+
         <Button
             android:id="@+id/delete_class_button"
             android:layout_width="0dp"
